  * As part of userdevfs cleanup, removed m68k initrd22 images,
    the regular initrds should work wih 2.2 kernels.
  * Add ads subarch for arm, with a "cf" image flavour used to boot
    various ADS arm boards from compact flash. There is not yet a kernel for
    these boards in Debian, so the images do not include a kernel and must be
    used with a monolithic kernel (from ADS).

  [ Sven Luther ]
  * Enabled powerpc64 support.
  * Killed all 2.4 powerpc kernels except apus.
  * Upgraded to 2.6.12 powerpc kernels.
  
  [ Otavio Salvador ]
  * Change dependency to libparted1.6-13 due a new soname change on parted
    1.6.24.

 -- Sven Luther <luther@debian.org>  Thu, 18 Aug 2005 09:16:49 +0200

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2005 10:54:07 -0500

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
    - Add cramfsprogs build-dep for mips.
  * Colin Watson
    - Add acpi-modules to the amd64 cdrom, hd-media, monolithic, and netboot
      initrds, so that rootskel can turn the fan on.
    - Use dependency resolution for ide-modules, nic-modules,
      pcmcia-storage-modules, scsi-common-modules, scsi-modules, and
      usb-storage-modules on powerpc, and remove several modules from
      powerpc-extra-modules that only belong on certain images. This removes