@@ -67,7 +67,7 @@ build () {
 			echo "building $t failed, see log file dest/$t.log for details" >&2
 		fi
 	done
-	$ROOTCMD make $(echo $TARGETS | sed 's/build_/stats_/g') > dest/stats.txt 2>&1 || true
+	$ROOTCMD make stats > dest/stats.txt 2>&1 || true
 	make release > /dev/null
 }
 
